<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DriveLogger</string>
    <string name="description_fab_new_drivelog">add a new drive log</string>
    <string name="menu_register_log">register a log</string>
    <string name="menu_delete_log">delete a drive log</string>
    <string name="message_remove_drivelog">Do you want to remove this log?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_overwrite_drivelog">Do you want to register the modification?</string>
    <string name="message_discard_modification_drivelog">Do you want to discard the changes?</string>
    <string name="title_date">Date</string>
    <string name="title_mileage">mileage (km)</string>
    <string name="hint_memo">Memo</string>
    <string name="title_fuel_efficient">Fuel Efficient (km/L)</string>
    <string name="menu_title_sort">Sort</string>
    <string name="sort_date_ascending">ascending order by date</string>
    <string name="sort_date_descending">descending order by date</string>
    <string name="hint_input_date">date</string>
    <string name="hint_mileage">mileage</string>
    <string name="hint_fuel_efficient">Fuel Efficient (km/L)</string>
    <string name="hint_total_mileage">Total Mileage (km)</string>
    <string name="title_total_mileage">Total Mileage (km)</string>
    <string name="hint_required">This field is required</string>
    <string name="message_invalid_input">Field contains invalid value</string>
    <string name="text_km" translatable="false">%.2f km</string>
    <string name="menu_title_import_export">Import/Export</string>
    <string name="menu_title_import">Import</string>
    <string name="menu_title_export">Export</string>
    <string name="message_export_file_already_exists">An export file already exists. Do you want to overwrite it?</string>
    <string name="message_export_file_successful">Export successful</string>
    <string name="message_import_file_successful">Import successful</string>
    <string name="screen_title_drive_logging">DriveLog</string>
    <string name="screen_title_refuel_logging">RefuelLog</string>
    <string name="title_fuel_amount">Fuel Amount (L)</string>
    <string name="hint_fuel_amount">Fuel Amount (L)</string>
    <string name="title_fuel_price">Price (yen/L)</string>
    <string name="hint_fuel_price">Price (yen/L)</string>
    <string name="message_remove_refuellog">Do you want to remove this refuel log?</string>
    <string name="message_discard_modification_refuellog">Do you want to discard the changes?</string>
    <string name="message_overwrite_refuellog">Do you want to register the modification?</string>
    <string name="text_l" translatable="false">%.2f L</string>
    <string name="text_km_l" translatable="false">%.2f km/L</string>
    <string name="title_ok" translatable="false">OK</string>
    <string name="title_cancel">Cancel</string>
</resources>
