<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/list_menu_sort_log"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/menu_title_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/list_menu_sort_date_ascending"
                    android:title="@string/sort_date_ascending"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/list_menu_sort_date_descending"
                    android:title="@string/sort_date_descending"
                    app:showAsAction="never" />
            </group>
        </menu>

    </item>

    <item
        android:id="@+id/list_menu_import_export"
        android:icon="@drawable/ic_baseline_import_export_24"
        android:title="@string/menu_title_import_export"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/list_menu_export"
                android:title="@string/menu_title_export" />
            <item
                android:id="@+id/list_menu_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/menu_title_import" />
        </menu>

    </item>
</menu>